examples/test/testpolicy7413.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7413
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key6: value33
      key45: value33
      key16: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value49
          key30: value10
      podSelector:
        matchLabels:
          key26: value22
          key24: value34
